[[bin]]
name = "tki"
path = "src/main.rs"
[package]
name = "tanuki-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"] }
serde = { version = "1.0.193", features = ["serde_derive", "derive"] }
serde_yaml = "0.9.27"
